--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,20 @@
 {
    "name": "Read with Instapaper",
    "description": "Instantly view any compatible web page in Instapaper's text view.",
-   "version": "0.2",
+   "version": "0.3",
    "background": {
        "scripts": ["background.js"]
    },
    "browser_action": {
-      "default_icon": "browser-action-icon.png",
+       "default_icon": {
+          "19": "icon-19.png",
+          "38": "icon-19@2x.png"
+       },
       "default_title": "Instapaper Text"
    },
     "homepage_url": "https://github.com/pcomans/ReadWithInstapaper",
    "icons": {
-      "128": "icon-128.png",
-      "16": "icon-16.png",
-      "48": "icon-48.png"
+      "128": "icon-128.png"
    },
    "permissions": [
        "tabs"
