--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,13 @@
    "description": "Instantly view any compatible web page in Instapaper's text view.",
    "version": "0.3",
    "background": {
-       "scripts": ["background.js"]
+       "service_worker": "background.js"
    },
-   "browser_action": {
+   "action": {
        "default_icon": {
-          "19": "icon-19.png",
-          "38": "icon-19@2x.png"
+          "16": "icon16.png",
+          "24": "icon24.png",
+          "32": "icon32.png"
        },
       "default_title": "Instapaper Text"
    },
@@ -19,5 +20,5 @@
    "permissions": [
        "tabs"
    ],
-   "manifest_version": 2
+   "manifest_version": 3   
 }
